syntax = "proto3";

package order;

option go_package = "build/order";

import "protos/global/global.proto";

message PocketMoney {
  // 充值id
  string pmId = 1;  // @gotags: gorm:"primary_key"
  // 充值方式名称
  string paymentName = 2;
  // 充值类型 1：微信支付 2支付宝支付 3：银行卡支付 4：其他支付 ...
  int64 payType = 3;
  // 充值金额
  double amount = 4;
  // 订单号
  string orderNo = 5;
  // 订单号
  string tradeNo = 6;
  // 充值状态 支付状态(1:待支付 2:已支付 3:支付超时关闭 4:支付失败)
  int64 payStatus = 7;  // @gotags: gorm:"column:pay_status" validate:"required"
  // 删除状态
  bool delStatus = 8;  // @gotags: `gorm:"-" swaggerignore:"true" minimum:"0" maximum:"1" default:"0"`
  // 创建人
  string createBy = 9;  // @gotags: `gorm:"->;<-:create" swaggerignore:"true" minLength:"6" maxLength:"19"`
  // 修改人
  string updateBy = 10;  // @gotags: `gorm:"->;<-:update" swaggerignore:"true" minLength:"6" maxLength:"19"`
  // 创建时间
  string createTime = 11;  // @gotags: `gorm:"->" swaggerignore:"true"`
  // 修改时间
  string updateTime = 12;  // @gotags: `gorm:"->" swaggerignore:"true"`
}

message PocketMoneyListVo {
  // 充值id
  string pmId = 1;  // @gotags: json:"rechargeId"
  // 充值方式名称
  string paymentName = 2;  // @gotags: json:"paymentName"
  // 充值类型 1：微信支付 2支付宝支付 3：银行卡支付 4：其他支付 ...
  int64 payType = 3;  // @gotags: json:"payType"
  // 充值金额
  double amount = 4;  // @gotags: json:"amount"
  // 订单号
  string orderNo = 5;  // @gotags: json:"orderNo"
  // 订单号
  string tradeNo = 6;  // @gotags: json:"tradeNo"
  // 支付状态(1:待支付 2:已支付 3:支付超时关闭 4:支付失败)
  int64 payStatus = 7;  // @gotags: json:"payStatus"
  // 支付状态名称
  string payStatusName = 8;  // @gotags: json:"payTime"
  // 创建时间
  string createTime = 9;  // @gotags: json:"createTime"
  // 修改时间
  string payTime = 10;  // @gotags: json:"payTime"
}

message PocketMoneyIds {
  // 充值id
  repeated string pmId = 1;
  // 订单号
  string orderNo = 2;
  // 下单号
  string tradeNo = 3;
  // 用户id
  string userId = 4;
}

message PocketMoneyPageAuthQuery {
  // 分页索引
  int64 pageIndex = 1;  //  @gotags: `validate:"required,min=1" example:"1"`
  // 分页长度
  int64 pageSize = 2;  //  @gotags: `validate:"required,min=10,max=100" example:"10"`
  // 查询调教
  message QueryParams {
    // 充值订单id
    string rechargeId = 1;
    // 支付类型
    string payType = 2;
  }
  // 查询参数
  QueryParams params = 3;
  // 用户登录授权信息
  global.Auth auth = 4;  // @gotags: swaggerignore:"true"`
}

message PocketMoneyResponse {
  int64 count = 1;  // 数据量
  string Msg = 2;  // 错误信息
  PocketMoney detail = 3;  // 详情
  repeated PocketMoneyListVo list = 4;  // 数据量
}

service PocketMoneyService {
  // 创建充值订单
  rpc Create(PocketMoney) returns (PocketMoneyResponse);

  // 更新充值订单
  rpc Update(PocketMoney) returns (PocketMoneyResponse);

  // 查询充值记录分页
  rpc FindPageList(PocketMoneyPageAuthQuery) returns (PocketMoneyResponse);

  // 查询充值订单详情
  rpc FindById(PocketMoneyIds) returns (PocketMoneyResponse);
}